# TODO none of this works - just include files directly
#cmake_minimum_required (VERSION 3.5)
#project(lf_utils)

### Configuration
#set(CPP_ROOT "${CMAKE_CURRENT_LIST_DIR}/..")
#set(CPP_SOURCE_DIR "${LIBIGL_ROOT}/cpp")

# TODO Used as a header only library for now
#add_library(lf_utils INTERFACE)
#target_include_directories(lf_utils INTERFACE ${CPP_SOURCE_DIR})
